...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
    
        environmentControl.selectedSegmentIndex = environment.intValue
        environmentControl.accessibilityIdentifier = "env_control"
        checkoutHandlingControl.selectedSegmentIndex = paymentHandling == .auto ? 0 : 1
        checkoutHandlingControl.accessibilityIdentifier = "payment_control"
        apiKeyTextField.accessibilityIdentifier = "api_key_txt_field"
        apiKeyTextField.text = nil
        metadataTestCaseTextField.accessibilityIdentifier = "metadata_test_case_txt_field"
        metadataTestCaseTextField.text = nil
        customerIdTextField.accessibilityIdentifier = "customer_id_txt_field"
        customerIdTextField.text = "ios-customer-\(String.randomString(length: 8))"
        phoneNumberTextField.accessibilityIdentifier = "phone_number_txt_field"
        phoneNumberTextField.text = nil
        phoneNumberTextField.accessibilityIdentifier = "phone_number_txt_field"
        countryCodeTextField.text = CountryCode.de.rawValue
        countryCodeTextField.accessibilityIdentifier = "country_code_txt_field"
        currencyTextField.text = Currency.EUR.rawValue
        currencyTextField.accessibilityIdentifier = "currency_txt_field"
        amountTextField.placeholder = "In minor units (type 100 for 1.00)"
        amountTextField.text = "10100"
        amountTextField.accessibilityIdentifier = "amount_txt_field"
        performPaymentSwitch.isOn = performPaymentAfterVaulting
        performPaymentSwitch.accessibilityIdentifier = "perform_payment_switch"
        
        let countryPicker = UIPickerView()
        countryPicker.accessibilityIdentifier = "country_picker"
        countryPicker.tag = 0
        countryCodeTextField.inputView = countryPicker
        countryPicker.dataSource = self
...
