...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" apportionsSegmentWidthsByContent="YES" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="HhM-iV-pMY">
                                                        <rect key="frame" x="0.0" y="25" width="382" height="32"/>
                                                        <segments>
                                                            <segment title="Local"/>
                                                            <segment title="Dev"/>
                                                            <segment title="Sandbox"/>
                                                            <segment title="Staging"/>
                                                            <segment title="Production"/>
                                                        </segments>
                                                        <connections>
                                                            <action selector="environmentValueChanged:" destination="Hsc-Wl-Q65" eventType="valueChanged" id="I8N-Rc-Y6I"/>
                                                        </connections>
                                                    </segmentedControl>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Checkout handling:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eXG-wi-l6M">
...
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="KAf-TR-l1d" userLabel="Buttons List Stack View">
                                                <rect key="frame" x="62.5" y="503" width="289" height="186"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uou-Rn-KOH">
                                                        <rect key="frame" x="1.5" y="0.0" width="286" height="34.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="initialize_primer_sdk"/>
                                                        <state key="normal" title="Initialize Primer SDK - Universal Checkout"/>
                                                        <connections>
                                                            <action selector="initializePrimerButtonTapped:" destination="Hsc-Wl-Q65" eventType="touchUpInside" id="kia-UZ-chG"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FFw-xV-IYR">
...
                                <viewLayoutGuide key="contentLayoutGuide" id="ZHh-LO-4jh"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="5ym-d1-huv"/>
                            </scrollView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="ecX-48-OcF"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="app_settings_background_view"/>
                        <gestureRecognizers/>
                        <constraints>
                            <constraint firstItem="5bd-jd-2h8" firstAttribute="leading" secondItem="ecX-48-OcF" secondAttribute="leading" id="0Du-Zk-4aE"/>
                            <constraint firstItem="5bd-jd-2h8" firstAttribute="trailing" secondItem="ecX-48-OcF" secondAttribute="trailing" id="1QR-6b-QVD"/>
                            <constraint firstItem="5bd-jd-2h8" firstAttribute="bottom" secondItem="ecX-48-OcF" secondAttribute="bottom" id="gr3-9L-lF4"/>
                            <constraint firstItem="5bd-jd-2h8" firstAttribute="top" secondItem="ecX-48-OcF" secondAttribute="top" id="xXJ-dK-DSo"/>
...
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="but-Bs-no4">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="40"/>
                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="vault_button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="95Q-oB-p6m"/>
                                        </constraints>
                                        <state key="normal" title="Vault">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                            <action selector="openVaultButtonTapped:" destination="rv5-RJ-1cA" eventType="touchUpInside" id="oQm-Ri-3tu"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pnm-Mo-3XH">
                                        <rect key="frame" x="0.0" y="52" width="334" height="40"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="universal_checkout_button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="9Ss-wu-T5y"/>
                                        </constraints>
                                        <state key="normal" title="Universal Checkout">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
