...
    override func viewDidLoad() {
        super.viewDidLoad()
        postUIEvent(.view, type: .view, in: .errorScreen)
        (parent as? PrimerContainerViewController)?.navigationItem.hidesBackButton = true

        let successImage: UIImage? = .checkCircle
        successImage?.accessibilityIdentifier = "check-circle"

        let failureImage: UIImage? = .xCircle
        failureImage?.accessibilityIdentifier = "x-circle"

        let img = (screenType == .success) ? successImage : failureImage
        let imgView = UIImageView(image: img?.withRenderingMode(.alwaysTemplate))
        imgView.contentMode = .scaleAspectFit
        imgView.tintColor = .label
        imgView.translatesAutoresizingMaskIntoConstraints = false
...
